<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>
	<groupId>pl.dockerguardimage</groupId>
	<artifactId>docker-guard-image</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>docker-guard-image</name>
	<description>docker-guard-image</description>
	<properties>
		<java.version>17</java.version>
		<spring-boot-version>3.1.2</spring-boot-version>
		<maven-plugin>3.1.2</maven-plugin>
		<maven.compiler.source>1.17</maven.compiler.source>
		<maven.compiler.target>1.17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<modules>
		<module>core</module>
		<module>data</module>
		<module>api</module>
		<module>security</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot-version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-plugin}</version>
					<configuration>
						<parallel>all</parallel>
						<threadCount>10</threadCount>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>


</project>
